# exfetch

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  multi_partition_table_generate.sh  setup.cfg  setup.py
conf/: default.yaml  default_prod.yaml
conf/all/: run.yaml
conf/binance_fut_aggtrade/: binance_fut_aggtrade.sql  run  run.yaml
conf/binance_fut_all_mark_price/: binance_fut_all_mark_price.sql  run.yaml  ts_binance_fut_all_mark_price.sql
conf/binance_fut_mark_price/: binance_fut_all_mark_price.sql  run.yaml
conf/binance_open_interest/: binance_open_interest.sql  run.yaml  ts_binance_open_interest.sql
conf/binance_spot_aggtrade/: binance_spot_aggtrade.sql  run.yaml
conf/bitmex_instrument/: run.out  run.sql  run.yaml
conf/bitmex_trade/: run.out  run.sql  run.yaml
conf/bitmex_trade_xbtusd/: run.sql  run.yaml
conf/bitstamp_spot/: run.out  run.sql  run.yaml
conf/bitstamp_spot_btcusd/: run.yaml
conf/coinbase_ticker/: run.yaml
conf/deribit_book_summary/: run.out  run.sql  run.yaml
conf/deribit_book_summary_future/: run.out  run.sql  run.yaml
conf/deribit_book_summary_option/: run.sql  run.yaml
conf/deribit_opt_trades/: run.out  run.sql  run.yaml  run1.yaml
conf/deribit_trades/: run.sql  run.yaml
conf/exfe_binance/: run  run.yaml  run.yt
conf/exfe_deribit/: run.yaml
conf/exfetcher/: run.yaml
conf/exfetcher_uniq/: run  (+1 more)
exfetch/: cli.py  exfetch.py  exfetch_engine.py  info.py  json_dsl.py  utils.py  wjscli.py
scripts/: bs_in_a_row.sh  crontab  ext_table_and_restart.sh  maint_table_partition_01.sh  maint_table_partition_02.sh
(+5 files in other folders)
