[exfetch]
name = exfetch
author = ting
author_email = tingle2008@gmail.com
description = multi exchange fetcher


[options]
packages = find:
include_package_data = True
zip_safe = False

install_requires =
    dataclasses 
    aiohttp
    asyncpg
    pyyaml
    click


[options.entry_points]
console_scripts =
    exfetch = exfetch.cli:run
    wss_json_out = exfetch.wjscli:main
    json_dsl = exfetch.json_dsl:main

[options.package_data]
* = *.dll, *.so, *.pyd
