[exfetch]
name = exfetch
author = ting
author_email = tingle2008@gmail.com
description = multi exchange fetcher


[options]
packages = find:
include_package_data = True
zip_safe = False

install_requires =
    websockets==9.1
    dataclasses==0.6
    aiohttp==3.8.1
    asyncpg==0.25.0
    pyyaml==5.4.1
    click==8.0.3


[options.entry_points]
console_scripts =
    exfetch = exfetch.cli:run
    wss_json_out = exfetch.wjscli:main
    json_dsl = exfetch.json_dsl:main

[options.package_data]
* = *.dll, *.so, *.pyd
